# hal-flash

./: .gitignore  COPYING  FAQ.txt  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  hal-flash.spec  libhal1-flash.spec  libhal1.spec
debian/: changelog  control  copyright  docs  rules
m4/: .gitignore
rpm/: hal-flash.spec  libhal1-flash.spec
src/: Makefile.am  Makefile.in  libhal.c  libhal.h
test/: Makefile.am  Makefile.in  TESTING  flash.c
